--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@types/node": "^7.0.5",
     "awesome-typescript-loader": "^3.0.4",
     "html-webpack-plugin": "^2.28.0",
+    "karma": "^1.4.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
     "typescript": "^2.1.6",
     "webpack": "^2.2.1",
