--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "awesome-typescript-loader": "^3.0.4",
     "html-webpack-plugin": "^2.28.0",
     "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack": "^2.0.2",
