--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
   "name": "angular2-webpack",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "author": "Krzysztof Bukowski <ja@krzysztofbukowski.pl>",
+  "description": "Angular2 starter app with webpack, karma, mocha, chai and sinon",
   "scripts": {
     "test": "karma start",
-    "start": "webpack-dev-server --inline --progress --port 8080",
-    "build": "webpack -d --progress --colors"
+    "start": "webpack-dev-server --port 8080",
+    "build": "webpack -d --colors"
   },
-  "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^3.4.35",
+    "@types/expect.js": "^0.3.29",
+    "@types/mocha": "^2.2.39",
     "@types/node": "^7.0.5",
+    "@types/sinon": "^1.16.35",
     "awesome-typescript-loader": "^3.0.4",
+    "chai": "^3.5.0",
     "html-webpack-plugin": "^2.28.0",
     "karma": "^1.4.1",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sinon": "^1.0.5",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
+    "sinon": "^1.17.7",
+    "tslint": "^4.4.2",
     "typescript": "^2.1.6",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
