--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-remap-coverage": "^0.1.4",
     "karma-sinon": "^1.0.5",
+    "karma-source-map-support": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
+    "remap-istanbul": "^0.9.1",
     "sinon": "^1.17.7",
     "tslint": "^4.4.2",
     "typescript": "^2.1.6",
