--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "karma start",
     "start": "concurrently --kill-others \"webpack-dev-server --port 8080\" \"karma start\"",
+    "serve": "webpack-dev-server --port 8080",
     "build": "webpack -d --colors"
   },
   "license": "ISC",
@@ -19,6 +20,7 @@
     "chai": "^3.5.0",
     "concurrently": "^3.3.0",
     "html-webpack-plugin": "^2.28.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "karma": "^1.4.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -26,6 +28,7 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
+    "karma-remap-istanbul": "^0.6.0",
     "karma-sinon": "^1.0.5",
     "karma-source-map-support": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
