--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Angular2 starter app with webpack, karma, mocha, chai and sinon",
   "scripts": {
     "test": "karma start",
-    "start": "concurrently --kill-others \"webpack-dev-server --port 8080\" \"karma start\"",
-    "serve": "webpack-dev-server --port 8080",
+    "start": "concurrently --kill-others \"npm run serve\" \"karma start\"",
+    "serve": "webpack-dev-server",
     "build": "webpack -d --colors"
   },
   "license": "ISC",
@@ -16,9 +16,11 @@
     "@types/mocha": "^2.2.39",
     "@types/node": "^7.0.5",
     "@types/sinon": "^1.16.35",
+    "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.0.4",
     "chai": "^3.5.0",
     "concurrently": "^3.3.0",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "istanbul-instrumenter-loader": "^2.0.0",
     "karma": "^1.4.1",
@@ -36,6 +38,7 @@
     "mocha": "^3.2.0",
     "remap-istanbul": "^0.9.1",
     "sinon": "^1.17.7",
+    "style-loader": "^0.13.2",
     "tslint": "^4.4.2",
     "typescript": "^2.1.6",
     "webpack": "^2.2.1",
